--- a/.github/workflows/metics.yml
+++ b/.github/workflows/metics.yml
@@ -43,5 +43,5 @@ jobs:
           plugin_topics_mode: icons
           plugin_topics_sort: stars
           plugin_projects: yes
-          plugin_projects_repositories: congcoi123/tenio-core/projects/1
+          plugin_projects_repositories: congcoi123/tenio/projects/1,congcoi123/tenio-core/projects/1,congcoi123/tenio-engine/projects/1,congcoi123/tenio-common/projects/1
           plugin_projects_descriptions: no
